--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,22 @@
 </header>
 <div class="container">
     <div class="row">
-        <div class="col-lg-3">3</div>
-        <div class="col-lg-3">3</div>
-        <div class="col-lg-3">3</div>
-        <div class="col-lg-3">3</div>
+        <div class="col-md-6">
+            <div class="num">
+            33
+            <div class="card">
+                    <div class="card-body">
+                      This is some text within a card body.
+                    </div>
+                  </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="num">
+            333
+            </div>
+    </div>
+       
     </div>
     <div class="row">
         <div class="col-lg-6">Lorem ipsum</div>
