--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-   <!-- build:css -->
-   <!-- endbuild -->
-   <!-- build:js -->
-   <!-- endbuild -->
+    <!-- build:cssVendors -->
+    <!-- endbuild -->
+    <!-- build:css -->
+    <!-- endbuild -->
+    <!-- build:js -->
+    <!-- endbuild -->
 </head>
-<body> 
-<header>
 
-</header>
-<div class="container">
-    <div class="row">
-        <div class="col-lg-3">3</div>
-        <div class="col-lg-3">3</div>
-        <div class="col-lg-3">3</div>
-        <div class="col-lg-3">3</div>
-    </div>
-    <div class="row">
-        <div class="col-lg-6">Lorem ipsum</div>
-        <div class="col-lg-6">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex tempore fuga modi quis culpa molestias porro, placeat consectetur et, ut earum optio blanditiis consequatur sunt ipsum? Veritatis accusantium fugiat perferendis.</div>
-        <div class="col-lg-12">12</div>
-    </div>
+<body>
+    <header>
 
-</div>
+    </header>
+    <div class="container">
+        <div class="row">
+            <div class="col-3">3</div>
+            <div class="col-3">3</div>
+            <div class="col-3">3</div>
+            <div class="col-3">3</div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6">Lorem ipsum ddddd</div>
+            <div class="col-lg-6">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex tempore fuga modi quis culpa molestias porro, placeat consectetur et, ut earum optio blanditiis consequatur sunt ipsum? Veritatis accusantium fugiat perferendis.</div>
+            <div class="col-lg-12">12</div>
+        </div>
+
+    </div>
     <!-- build:jsVendors -->
     <!-- endbuild -->
 </body>
+
 </html>
